--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "keywords": ["laravel", "dynamodb", "aws"],
     "require": {
         "aws/aws-sdk-php": "^3.0.0",
-        "illuminate/support": "5.1.* || 5.2.* || 5.3.* || 5.4.* || 5.5.* || 5.6.* || 5.7.* || 5.8.*",
-        "illuminate/database": "5.1.* || 5.2.* || 5.3.* || 5.4.* || 5.5.* || 5.6.* || 5.7.* || 5.8.*"
+        "illuminate/support": "5.1.* || 5.2.* || 5.3.* || 5.4.* || 5.5.* || 5.6.* || 5.7.* || 5.8.* || 5.9.* || 6.0.* || 6.1.* || 6.2.* || 6.3.*",
+        "illuminate/database": "5.1.* || 5.2.* || 5.3.* || 5.4.* || 5.5.* || 5.6.* || 5.7.* || 5.8.* || 5.9.* || 6.0.* || 6.1.* || 6.2.* || 6.3.*"
     },
     "license": "MIT",
     "authors": [
