--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "baopham/dynamodb",
+    "name": "fs-kanayama/laravel-dynamodb",
     "description": "Eloquent syntax for DynamoDB",
     "keywords": ["laravel", "dynamodb", "aws"],
     "require": {
@@ -10,8 +10,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Bao Pham",
-            "email": "gbaopham@gmail.com"
+            "name": "Takayuki Kanayama",
+            "email": "fs-kanayama@futurescope.jp"
         }
     ],
     "autoload": {
